src/objects/QPMS__Maintenance_Criteria__c.object
<CustomObject>
    <description>Stores maintenance criteria.</description>
    <fields>
        <fullName>QPMS__Criteria_Name__c</fullName>
        <label>Criteria Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Criteria_Type__c</fullName>
        <label>Criteria Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Attribute</fullName>
                </value>
                <value>
                    <fullName>Variable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Criteria__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Criteria</label>
        <referenceTo>QPMS__Criteria__c</referenceTo>
        <relationshipLabel>Maintenance Criterias</relationshipLabel>
        <relationshipName>Maintenance_Criterias</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Description__c</fullName>
        <description>Description</description>
        <inlineHelpText>Description</inlineHelpText>
        <label>Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QPMS__Last_Modified_By__c</fullName>
        <formula>LastModifiedBy.FirstName +&quot; &quot;+ LastModifiedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Maintenance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Maintenance</label>
        <referenceTo>QPMS__Maintenance__c</referenceTo>
        <relationshipLabel>Maintenance Criterias</relationshipLabel>
        <relationshipName>Maintenance_Criterias</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Measurement__c</fullName>
        <label>Measurement</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Result__c</fullName>
        <label>Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Tolerance_Minus__c</fullName>
        <label>Tolerance (-)</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Tolerance_Plus__c</fullName>
        <label>Tolerance(+)</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__UOM__c</fullName>
        <label>UOM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>mm</fullName>
                </value>
                <value>
                    <fullName>inch</fullName>
                </value>
                <value>
                    <fullName>kg</fullName>
                </value>
                <value>
                    <fullName>lbs</fullName>
                </value>
                <value>
                    <fullName>cm</fullName>
                </value>
                <value>
                    <fullName>m</fullName>
                </value>
                <value>
                    <fullName>g</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Maintenance Criteria</label>
    <nameField>
        <label>Maintenance Criteria Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maintenance Criterias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>